--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,18 +1,11 @@
 body {
+    /* using open sans font */
     font-family: 'Open Sans', sans-serif;
     font-family: 'Sevillana', cursive;
     font-family: 'Work Sans', sans-serif;
     margin: 0;
     text-align: center;
 }
-
-/* header{
-    background-image: url('../images/banner/banner2.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 900px;
-} */
 
 header {
     background-image: url('../images/banner/banner2.png');
@@ -51,7 +44,6 @@ header {
 
 main {
     text-align: center;
-    /* margin: 20px 150px; */
 }
 
 h1 {
@@ -80,17 +72,17 @@ span {
     font-weight: 70px;
 }
 
-#you-need{
+#you-need {
     margin-bottom: 40px;
 }
 
-.knowledge{
+.knowledge {
     display: flex;
     gap: 50px;
     margin: 40px;
 }
 
-.knowledge-p{
+.knowledge-p {
     margin: 30px;
 }
 
@@ -99,24 +91,26 @@ span {
     gap: 100px;
     margin: 20px 150px;
 }
-.main-section-div{
+
+.main-section-div {
     text-align: left;
     padding-top: 250px;
 }
 
-.my-plans{
+.my-plans {
     margin: 50px 500px;
     display: flex;
     gap: 70px;
 }
 
-h4{
+h4 {
     font-weight: 500;
     font-size: 16px;
     color: #737272;
 }
 
-.callnow{
+.callnow {
+    /* for gradient background */
     background-image: url('../images/gradient2.png'), url('../images/watch.png');
     background-repeat: no-repeat;
     text-align: left;
@@ -126,11 +120,11 @@ h4{
     margin-bottom: 20px;
 }
 
-.always{
+.always {
     color: #FFFFFF;
 }
 
-.btn2{
+.btn2 {
     padding: 15px;
     color: #F15B22;
     border: 0;
@@ -140,7 +134,7 @@ h4{
     font-size: 20px;
 }
 
-footer{
+footer {
     background-color: black;
     display: flex;
     gap: 100px;
@@ -150,26 +144,26 @@ footer{
     padding-left: 70px;
 }
 
-#future{
+#future {
     color: #FFFFFF;
     font-weight: 700;
     font-size: 45px;
 }
 
-#subscribe{
+#subscribe {
     color: #FFFFFF;
     font-weight: 600;
     font-size: 25px;
 }
 
-.footer-text{
+.footer-text {
     color: #FFFFFF;
     font-weight: 400;
     font-size: 16px;
     margin: 20px 0px;
 }
 
-input{
+input {
     padding: 19px 50px;
     border-radius: 8px;
     background-color: #151414;
