--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,7 @@ body {
     text-align: center;
 }
 
+/* for header styles */
 header {
     background-image: url('../images/banner/banner2.png');
     background-repeat: no-repeat;
@@ -42,6 +43,7 @@ header {
     font-size: 20px;
 }
 
+/* main part styles start */
 main {
     text-align: center;
 }
@@ -66,12 +68,7 @@ li {
     margin-bottom: 7px;
 }
 
-span {
-    color: #16D887;
-    font-size: 700;
-    font-weight: 70px;
-}
-
+/* first section styles start */
 #you-need {
     margin-bottom: 40px;
 }
@@ -85,7 +82,9 @@ span {
 .knowledge-p {
     margin: 30px;
 }
+/* first section styles end */
 
+/* second section styles start */
 .main-section {
     display: flex;
     gap: 100px;
@@ -97,6 +96,14 @@ span {
     padding-top: 250px;
 }
 
+span {
+    color: #16D887;
+    font-size: 700;
+    font-weight: 70px;
+}
+/* second section styles end */
+
+/* third section styles start */
 .my-plans {
     margin: 50px 500px;
     display: flex;
@@ -108,7 +115,9 @@ h4 {
     font-size: 16px;
     color: #737272;
 }
+/* third section styles end */
 
+/* fourth section styles start */
 .callnow {
     /* for gradient background */
     background-image: url('../images/gradient2.png'), url('../images/watch.png');
@@ -133,7 +142,9 @@ h4 {
     font-weight: 600;
     font-size: 20px;
 }
+/* fourth section styles end */
 
+/* footer styles start */
 footer {
     background-color: black;
     display: flex;
@@ -172,3 +183,6 @@ input {
     border-width: 0.1px;
     margin-bottom: 10px;
 }
+/* footer styles end */
+
+/* end of total body styles */
